--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "flowbite-react": "^0.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-intersection-observer": "^9.4.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
